outputs/generated_env/kubernetes/network_policies/cybersim-zone-a-allow-etcd-to-metrics-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-etcd-to-metrics-server
  namespace: cybersim-zone-a
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-1
      podSelector:
        matchLabels:
          app.kubernetes.io/name: etcd
    ports:
    - port: 4032
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  policyTypes:
  - Ingress
